# ninja-gekko

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  docker-compose.cuda.yml  docker-compose.mac.yml  docker-compose.yml  init_schema.sql  next_prompt.md  verify_api.sh
.github/: COPILOT_SETUP.md  ninja-gekko.agent.md
.github/ISSUE_TEMPLATE/: 01-exchange-api-integration.md  02-arbitrage-engine-implementation.md  03-cicd-production-hardening.md  bug_report.yml  config.yml  feature_request.yml  milestone.yml  security_audit.yml
.github/agents/: ninja-gekko.agent.md
.github/workflows/: ci.yml  claude-review.yml  release.yml
api/: Cargo.toml
api/src/: auth.rs  auth_validation.rs  config.rs  env_validation.rs  error.rs  indicators.rs  lib.rs  managers.rs  middleware.rs  models.rs  validation.rs  websocket.rs
api/src/handlers/: accounts.rs  arbitrage.rs  auth_utils.rs  chat.rs  intel.rs  intel_rss.rs  market_data.rs  mod.rs  orchestrator.rs  portfolio.rs  strategies.rs  trades.rs
api/src/llm/: models.rs
api/static/: websocket_test.html
api/tests/: integration_security.rs
config/: arbitrage.toml  prometheus.yml  trading_rules.yml
core/src/: order_manager.rs  smart_router.rs  types.rs
crates/arbitrage-engine/: Cargo.toml
crates/arbitrage-engine/src/: capital_allocator.rs  execution_engine.rs  lib.rs  opportunity_detector.rs
crates/data-pipeline/benches/: normalizer.rs
crates/data-pipeline/src/: ingestion.rs  normalizer.rs  pipeline.rs
crates/event-bus/benches/: dispatcher.rs
crates/event-bus/src/: channel.rs
crates/event-bus/tests/: integration.rs
crates/exchange-connectors/: Cargo.toml
crates/exchange-connectors/benches/: exchange_benchmarks.rs
crates/exchange-connectors/examples/: debug_jwt.rs  test_kraken.rs  verify_transaction.rs
crates/exchange-connectors/src/: binance_us.rs  coinbase.rs  credentials.rs  kraken.rs  lib.rs  oanda.rs
crates/exchange-connectors/tests/: binance_us_integration.rs  binance_us_tests.rs  coinbase_integration.rs  coinbase_tests.rs  oanda_integration.rs  oanda_tests.rs  rate_limiting_tests.rs  verify_transaction_flow.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: discord_webhook.rs  execution.rs  lib.rs  openrouter_client.rs  perplexity_browser.rs  perplexity_client.rs  rate_limiter.rs
crates/mcp-client/tests/: integration_test.rs
crates/mcp-server-trade/: Cargo.toml
crates/mcp-server-trade/src/: main.rs  safety.rs
crates/neural-engine/: Cargo.toml
crates/neural-engine/src/: fann_backend.rs  lib.rs
crates/strategy-engine/: Cargo.toml
crates/strategy-engine/benches/: indicators.rs  strategy_eval.rs
crates/strategy-engine/src/: lib.rs  runner.rs
crates/strategy-engine/src/indicators/: buffer.rs  mod.rs  momentum.rs  state.rs  trend.rs  volatility.rs  volume.rs
crates/strategy-engine/src/strategies/: mod.rs  momentum_strategy.rs
database/: Cargo.toml
database/migrations/: V003__create_trade_execution_tables.sql  V004__create_chat_history_table.sql
database/src/: cache.rs  config.rs  connection.rs  database.rs  error.rs  lib.rs  migrations.rs  supabase.rs  types.rs
debug/: README.md
debug/archive/2024-12-dev-checkpoints/: logs_after_cors_fix.txt  logs_after_fix.txt  logs_after_network_fix.txt  logs_clean_restart.txt  logs_final.txt  logs_final_check.txt  logs_final_final.txt
debug/current/: logs.txt  panic_logs.txt
deploy/k8s/base/: kustomization.yaml  tenno-mcp-router.yaml  trading-engine.yaml
deploy/k8s/gpu/: gpu-inference.yaml  kustomization.yaml
deploy/k8s/hpa/: kustomization.yaml  trading-engine-hpa.yaml
deploy/monitoring/grafana/: trading-dashboard.json
docs/: BACKTESTING_FRAMEWORK.md  GPU_SETUP.md  PRODUCTION_READINESS_ROADMAP.md  SECURITY_AUDIT_CHECKLIST.md  TESTING_STRATEGY.md  TODO_TRACKING.md  arbitrage_architecture.md  chat_ui_architecture.md  credential_audit_report.md  launch_blockers_resolution_guide.md  next_phase_issue.md
docs/deployment/: README.md
examples/: gekko_demo.rs
frontend/chat-ui/: Dockerfile  index.html  nginx.conf  nginx.mac.conf  package-lock.json  package.json  vite.config.ts
frontend/chat-ui/e2e/: market-radar.spec.ts  playwright-accessibility.spec.ts
frontend/chat-ui/src/: App.tsx
frontend/chat-ui/src/components/chat/: ChatComposer.tsx  ChatConversation.tsx
frontend/chat-ui/src/components/panels/: ActionDashboard.tsx  DiagnosticsPanel.tsx  InsightsPanel.tsx  MarketRadar.tsx  PersonaControls.tsx
frontend/chat-ui/src/components/ui/: HeaderMetrics.tsx  Modal.tsx  ModelSelector.tsx
frontend/chat-ui/src/hooks/: useChartData.ts  useChatController.ts  useIntelWebSocket.ts
frontend/chat-ui/src/services/: api.ts
frontend/chat-ui/src/state/: chatStore.ts
frontend/chat-ui/src/types/: index.ts
models/: README.md
scripts/: dev-mac-hybrid.sh  dev-setup-mac.sh  dev-setup-windows.ps1  dev.sh  verify_gpu.sh
src/: core.rs  lib.rs  main.rs  web.rs
src/mcp/mcp_admin/: mod.rs
tests/: health_verification.rs  integration.rs  integration_metrics.rs
tests/e2e/: autonomous_modes_tests.rs  trading_flow_tests.rs
tests/integration/: db_tests.rs  redis_tests.rs
