[package]
name = "ninja-gekko"
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["Ninja Gekko Development Team <contact@ninja-gekko.ai>"]
description = "Next-Generation Rust-Powered Autonomous Trading Bot with Advanced MCP Intelligence"
documentation = "https://docs.ninja-gekko.ai"
repository = "https://github.com/clduab11/ninja-gekko"
license = "MIT"
keywords = ["trading", "neural-networks", "autonomous-bot", "mcp", "rust"]
categories = ["algorithms", "finance", "science", "web-programming", "wasm"]
readme = "README.md"

# High performance and security optimizations
[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true

# Workspace configuration for modular architecture
[workspace]
members = [
    "core",
    "database", 
    "api",
    "crates/exchange-connectors",
    "crates/arbitrage-engine",
    "crates/trading-core",
    "crates/neural-engine",
    "crates/swarm-intelligence",
    "crates/mcp-client",
    "crates/event-bus",
    "crates/data-pipeline",
    "crates/strategy-engine"
]

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Trading & market data
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database & caching
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization & config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Neural networks (ruv-FANN integration)
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# HTTP & WebSocket clients
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = "0.21"
wasmtime = "25.0"
wasmtime-wasi = "25.0"

# Error handling & logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Security & crypto
argon2 = "0.5"
aes-gcm = "0.10"
jwt = "0.16"
secrecy = { version = "0.8", features = ["serde"] }

# Utilities
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"

# Additional dependencies for exchange connectors
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
governor = "0.6"
url = "2.5"
tokio-util = { version = "0.7", features = ["time"] }
futures-util = "0.3"
dotenv = "0.15"

# Concurrency primitives and serialization
crossbeam-channel = "0.5"
bincode = "1.3"
bytes = "1.6"

# Observability
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Statistics for arbitrage engine
statrs = "0.17"
indexmap = "2.6"

# Pinned dependencies (home 0.5.12 requires edition2024 which needs Rust 1.85+)
home = "0.5.9"

[dev-dependencies]
testcontainers = "0.15"
tokio = { version = "1.0", features = ["full", "macros"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp"] }

[dependencies]
# Core dependencies for the main binary
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
dotenv = { workspace = true }

# Exchange connectors and arbitrage engine
exchange-connectors = { path = "crates/exchange-connectors" }
arbitrage-engine = { path = "crates/arbitrage-engine" }
event-bus = { path = "crates/event-bus" }
strategy-engine = { path = "crates/strategy-engine" }
mcp-client = { path = "crates/mcp-client" }
ninja-gekko-core = { path = "core" }

# HTTP API surface for the chat UI
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Observability
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
