[package]
name = "ninja-gekko-api"
version = "0.1.0"
edition = "2021"
description = "High-performance REST API and WebSocket server for the Ninja Gekko trading system"
keywords = ["trading", "api", "websocket", "axum", "rest"]
categories = ["api-bindings", "web-programming", "finance"]

[dependencies]
# Core dependencies
ninja-gekko-core = { path = "../core" }
ninja-gekko-database = { path = "../database" }
arbitrage-engine = { path = "../crates/arbitrage-engine" }
exchange-connectors = { path = "../crates/exchange-connectors" }
strategy-engine = { path = "../crates/strategy-engine" }
event-bus = { path = "../crates/event-bus" }
home = "=0.5.9"

# Database
sqlx = { workspace = true, features = ["macros", "rust_decimal"] }

# Axum web framework
axum = { version = "0.7", features = ["ws", "macros", "tracing", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "util", "limit", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive", "env"] }

# Utilities
once_cell = "1.19"
dashmap = "6.0"
parking_lot = "0.12"

# WebSocket and real-time
futures = "0.3"
async-stream = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# RSS Feed Parsing
feed-rs = "2.0"

# Environment variables
dotenvy = "0.15"

# Random and crypto
rand = "0.8"

# Security validation
regex = "1.10"
lazy_static = "1.4"
rust_decimal = { version = "1.35", features = ["serde-with-str"] }

# Testing
criterion = "0.5"
proptest = "1.0"
tower-test = "0.4"

# Mocking
mockall = "0.12"


[features]
default = ["websocket"]
websocket = []
testing = ["mock"]
mock = []

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"