[package]
name = "mcp-client"
version = "2.0.0"
edition = "2021"
description = "MCP client for Ninja Gekko"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
event-bus = { path = "../event-bus" }
anyhow = "1.0"
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }