[package]
name = "mcp-client"
version = "2.0.0"
edition = "2021"
description = "MCP client for Ninja Gekko"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
event-bus = { path = "../event-bus" }
anyhow = "1.0"
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { workspace = true }
bytes = { workspace = true }
urlencoding = "2.1"
thiserror = "1.0"
rust_decimal = { workspace = true }
async-trait = { workspace = true }