[package]
name = "neural-engine"
version = "2.0.0"
edition = "2021"
description = "Enhanced neural engine for Gordon Gekko arbitrage trading"

[dependencies]
# Async runtime and utilities
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Date and time
chrono = { workspace = true }

# GPU acceleration frameworks (conditional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
accelerate-src = { version = "0.3", optional = true }

[features]
default = []
candle = ["dep:candle-core", "dep:candle-nn"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "dep:accelerate-src"]
pytorch = []
ruv-fann = []