[package]
name = "strategy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasmtime = { version = "25.0", default-features = false, features = ["std", "runtime", "cranelift", "async", "component-model"] }
wasmtime-wasi = "25.0"
bytes = { workspace = true }
thiserror = { workspace = true }
event-bus = { path = "../event-bus" }
exchange-connectors = { path = "../exchange-connectors" }
ninja-gekko-core = { path = "../../core" }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
yata = { version = "0.7", features = ["serde"] }


[dev-dependencies]
once_cell = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
criterion = { version = "0.5", features = ["async_tokio"] }
wat = "1.0"

[[bench]]
name = "indicators"
harness = false
